--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,8 +1,15 @@
 name: docker-build
 
-#on:
-#  push:
-#    branches: [main]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches:
+      - main
+  # Also trigger on release created event
+  release:
+    types:
+      - created
 
 jobs:
   build:
@@ -27,7 +34,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+          aws-region: "us-east-1"
         uses: aws-actions/configure-aws-credentials@v1
       - name: Login to Amazon ECR
         id: login-ecr
