--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Push docker image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: cms-aws-inspec-profile
+          ECR_REPOSITORY: inspec-profile-aws-mod
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${TAG}
