--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -45,4 +45,4 @@ jobs:
           ECR_REPOSITORY: inspec-profile-aws-mod
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} --all-tags
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
