--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,20 +16,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Create Docker tag
+      - name: Create env var for docker tag
         run: echo "TAG=$(date +%s)" >> "$GITHUB_ENV"
-      - name: Create git sha tag
+      - name: Create env var for git sha tag
         run: echo "HASH=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
+      - name: Create env var for ECR repo
+        run:  echo "ECR_REPOSITORY=inspec-profile-aws-mod" >> "$GITHUB_ENV"
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag aws-cis-inspec-scanner:${TAG} --tag aws-cis-inspec-scanner:latest --tag aws-cis-inspec-scanner:${HASH}
+        run: docker build . --file Dockerfile --tag $ECR_REGISTRY:${TAG} --tag $ECR_REGISTRY:latest --tag $ECR_REGISTRY:${HASH}
       - name: Test the Docker image
         run: |
-          docker run --entrypoint /bin/bash aws-cis-inspec-scanner:${TAG} -c "aws --version"
-          docker run --entrypoint /bin/bash aws-cis-inspec-scanner:${TAG} -c "git --version"
-          docker run --entrypoint /bin/bash aws-cis-inspec-scanner:${TAG} -c "curl --version"
-          docker run --entrypoint /bin/bash aws-cis-inspec-scanner:${TAG} -c "gpg --version"
-          docker run --entrypoint /bin/bash aws-cis-inspec-scanner:${TAG} -c "gpg-agent --version"
-          docker run --entrypoint /bin/bash aws-cis-inspec-scanner:${TAG} -c "unzip"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY:${TAG} -c "aws --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY:${TAG} -c "git --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY:${TAG} -c "curl --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY:${TAG} -c "gpg --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY:${TAG} -c "gpg-agent --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY:${TAG} -c "unzip"
       - name: Configure AWS Credentials
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -42,7 +44,5 @@ jobs:
       - name: Push docker image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: inspec-profile-aws-mod
         run: |
-          docker build --tag $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} --tag $ECR_REGISTRY/$ECR_REPOSITORY:latest --tag $ECR_REGISTRY/$ECR_REPOSITORY:${HASH} .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY --all-tags
