--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Create env var for git sha tag
         run: echo "HASH=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
       - name: Create env var for ECR repo
-        run:  echo 'ECR_REPOSITORY="inspec-profile-aws-mod"' >> "$GITHUB_ENV"
+        run:  echo "ECR_REPOSITORY=inspec-profile-aws-mod" >> "$GITHUB_ENV"
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag $ECR_REPOSITORY:${TAG} --tag $ECR_REPOSITORY:latest --tag $ECR_REPOSITORY:${HASH}
       - name: Test the Docker image
