--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,16 +22,6 @@ jobs:
         run: echo "HASH=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
       - name: Create env var for ECR repo
         run:  echo "ECR_REPOSITORY=inspec-profile-aws-mod" >> "$GITHUB_ENV"
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $ECR_REPOSITORY:${TAG} --tag $ECR_REPOSITORY:latest --tag $ECR_REPOSITORY:${HASH}
-      - name: Test the Docker image
-        run: |
-          docker run --entrypoint /bin/bash $ECR_REPOSITORY:${TAG} -c "aws --version"
-          docker run --entrypoint /bin/bash $ECR_REPOSITORY:${TAG} -c "git --version"
-          docker run --entrypoint /bin/bash $ECR_REPOSITORY:${TAG} -c "curl --version"
-          docker run --entrypoint /bin/bash $ECR_REPOSITORY:${TAG} -c "gpg --version"
-          docker run --entrypoint /bin/bash $ECR_REPOSITORY:${TAG} -c "gpg-agent --version"
-          docker run --entrypoint /bin/bash $ECR_REPOSITORY:${TAG} -c "unzip"
       - name: Configure AWS Credentials
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -41,6 +31,20 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+      - name: Build the Docker image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: docker build . --file Dockerfile --tag $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} --tag $ECR_REGISTRY/$ECR_REPOSITORY:latest --tag $ECR_REGISTRY/$ECR_REPOSITORY:${HASH}
+      - name: Test the Docker image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
+          docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "aws --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "git --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "curl --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "gpg --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "gpg-agent --version"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "unzip"
       - name: Push docker image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
