add a test for inspec to verify that necessary dependencies are present

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,8 +5,7 @@ on:
     branches: [main]
   # Also trigger on release created event
   release:
-    types:
-      - created
+    types: [published]
 
 jobs:
   build:
@@ -42,6 +41,8 @@ jobs:
           docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "gpg --version"
           docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "gpg-agent --version"
           docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "unzip"
+          docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "inspec exec /home/default/profiles/cms-ars-3.1-moderate-aws-foundations-cis-overlay --chef-license accept-silent" # this test verifies that the inspec binary has all the dependencies it needs
+          docker run --entrypoint /bin/bash $ECR_REGISTRY/$ECR_REPOSITORY:${TAG} -c "exit 1"
       - name: Push docker image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
